[gd_scene load_steps=15 format=2]

[ext_resource path="res://NPC/NPC_1.png" type="Texture" id=1]
[ext_resource path="res://UI/DialogHUD/loading.png" type="Texture" id=2]
[ext_resource path="res://UI/DialogHUD/DialogHUD.gd" type="Script" id=3]
[ext_resource path="res://Font/UNIFONT.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/DialogHUD/window.png" type="Texture" id=5]
[ext_resource path="res://UI/DialogHUD/button_1.png" type="Texture" id=6]
[ext_resource path="res://UI/DialogHUD/button_2.png" type="Texture" id=7]
[ext_resource path="res://UI/DialogHUD/default_.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 124, 68 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 124, 0, 124, 68 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 248, 0, 124, 68 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 124, 0, 124, 68 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "anim",
"speed": 3.0
}, {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="Theme" id=12]

[node name="DialogHUD" type="Control"]
margin_right = 344.0
margin_bottom = 603.0
mouse_filter = 1
script = ExtResource( 3 )

[node name="JumpButton" type="Button" parent="."]
margin_left = 19.0
margin_top = 369.0
margin_right = 330.0
margin_bottom = 592.0
mouse_filter = 1

[node name="Window0" type="TextureRect" parent="."]
margin_top = 332.0
margin_right = 352.0
margin_bottom = 607.0
mouse_filter = 2
texture = ExtResource( 8 )

[node name="Window1" type="TextureRect" parent="."]
margin_top = 333.0
margin_right = 344.0
margin_bottom = 359.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 2

[node name="DragSection" type="Control" parent="Window1"]
pause_mode = 2
margin_top = -1.0
margin_right = 345.0
margin_bottom = 26.0
mouse_filter = 1

[node name="Tween4NPC" type="Tween" parent="."]

[node name="Tween4Window" type="Tween" parent="."]

[node name="anim" type="AnimatedSprite" parent="."]
position = Vector2( 168, 560 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 7 )
animation = "idle"

[node name="NPCLabel" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 376.0
margin_right = 320.0
margin_bottom = 544.0
mouse_filter = 2
theme = SubResource( 12 )
custom_fonts/italics_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
scroll_following = true

[node name="NextButton" type="TextureButton" parent="."]
margin_left = 264.0
margin_top = 544.0
margin_right = 306.0
margin_bottom = 585.0
disabled = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_disabled = ExtResource( 6 )
expand = true

[node name="PreviousButton" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 544.0
margin_right = 90.0
margin_bottom = 585.0
disabled = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_disabled = ExtResource( 6 )
expand = true
flip_h = true

[node name="NPC" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 32.0
margin_top = 64.0
margin_right = 305.0
margin_bottom = 350.0
texture = ExtResource( 1 )

[connection signal="pressed" from="JumpButton" to="." method="_on_JumpButton_pressed"]
[connection signal="tween_completed" from="Tween4NPC" to="." method="_on_NPC_tween_completed"]
[connection signal="tween_completed" from="Tween4Window" to="." method="_on_Window_tween_completed"]
[connection signal="pressed" from="NextButton" to="." method="show_next"]
[connection signal="pressed" from="PreviousButton" to="." method="show_previous"]
